EventForce-Salesforce/EventForce-Salesforce/force-app/main/default/objects/Event__c/fields/Event_Status__c.field-meta.xml
<CustomField>
  <fullName>Event_Status__c</fullName><label>Event Status</label><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Planned</fullName><default>true</default></value><value><fullName>Confirmed</fullName><default>false</default></value><value><fullName>Completed</fullName><default>false</default></value><value><fullName>Pending Cancellation</fullName><default>false</default></value><value><fullName>Canceled</fullName><default>false</default></value><value><fullName>Rejected</fullName><default>false</default></value></valueSetDefinition></valueSet>
</CustomField>