EventForce-Salesforce/EventForce-Salesforce/force-app/main/default/objects/Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
  <fullName>Event_Type__c</fullName><label>Event Type</label><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Wedding</fullName><default>false</default></value><value><fullName>Corporate</fullName><default>false</default></value><value><fullName>Birthday</fullName><default>false</default></value><value><fullName>Anniversary</fullName><default>false</default></value><value><fullName>Festival</fullName><default>false</default></value><value><fullName>Concert</fullName><default>false</default></value><value><fullName>Other</fullName><default>false</default></value></valueSetDefinition></valueSet>
</CustomField>