EventForce-Salesforce/EventForce-Salesforce/force-app/main/default/objects/Event__c/fields/Venue__c.field-meta.xml
<CustomField>
  <fullName>Venue__c</fullName><label>Venue</label><type>Lookup</type><referenceTo>Venue__c</referenceTo><relationshipLabel>Venues</relationshipLabel><relationshipName>Venue__c</relationshipName>
</CustomField>